--- a/Dependency-Injection-AspNetCore/Views/Home/Index.cshtml
+++ b/Dependency-Injection-AspNetCore/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@inject Dependency_Injection_AspNetCore.Services.Interface.ILog log     
+@{
+    //log 
     ViewData["Title"] = "Home Page";
 }
 
